[gd_scene load_steps=4 format=3 uid="uid://bf24u61lnipf0"]

[ext_resource type="Script" path="res://Scenes/world.gd" id="1_0eyll"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h7k85"]
size = Vector2(8.00007, 1920)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nq2pt"]
size = Vector2(1920, 64)

[node name="World" type="Node2D"]
script = ExtResource("1_0eyll")

[node name="Wall_Left" type="StaticBody2D" parent="."]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_Left"]
position = Vector2(-4, 564)
shape = SubResource("RectangleShape2D_h7k85")

[node name="Wall_Left2" type="StaticBody2D" parent="."]
position = Vector2(1928, 0)
collision_layer = 3
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_Left2"]
position = Vector2(-4, 564)
shape = SubResource("RectangleShape2D_h7k85")

[node name="Wall_Left3" type="StaticBody2D" parent="."]
position = Vector2(2032, 120)
rotation = 1.5708
collision_layer = 3
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_Left3"]
position = Vector2(-3.99995, 1072)
shape = SubResource("RectangleShape2D_h7k85")

[node name="Wall_Left4" type="StaticBody2D" parent="."]
position = Vector2(2032, 1088)
rotation = 1.5708
collision_layer = 3
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_Left4"]
position = Vector2(-3.99995, 1072)
shape = SubResource("RectangleShape2D_h7k85")

[node name="Border_bottom" type="Area2D" parent="."]
position = Vector2(960, 1048)
collision_layer = 3
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border_bottom"]
shape = SubResource("RectangleShape2D_nq2pt")

[node name="UI Shop Placeholder" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 112.0
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="UI Shop Placeholder"]
layout_mode = 0
offset_left = 63.0
offset_top = 36.0
offset_right = 158.0
offset_bottom = 76.0
text = "Spawn Fish
"

[node name="Clickable_area" type="TextureButton" parent="."]
offset_left = 5.0
offset_top = 119.0
offset_right = 1919.0
offset_bottom = 1015.0

[node name="Pellets" type="Node2D" parent="."]

[node name="Fishes" type="Node2D" parent="."]

[node name="Drops" type="Node2D" parent="."]

[connection signal="body_entered" from="Border_bottom" to="." method="_on_border_bottom_body_entered"]
[connection signal="pressed" from="UI Shop Placeholder/Button" to="." method="_on_button_pressed"]
[connection signal="button_down" from="Clickable_area" to="." method="_on_clickable_area_button_down"]
